Рефакторинг кода, остался только CallbackHandlerController